Fix hour overflow

--- a/src/app/evs/clock/clock.component.scss
+++ b/src/app/evs/clock/clock.component.scss
@@ -1,6 +1,4 @@
 .minute-hand {
-  fill:rgba(255,10,0,0.60);
-  stroke:rgba(255,10,0,0.62);
   stroke-width:1;
   transform-origin:50% 50%;
   -webkit-filter: drop-shadow( 1px 1px 1px rgba(0, 0, 0, .9));
@@ -8,8 +6,6 @@
 }
 
 .hour-hand {
-  fill:rgba(255,10,0,0.60);
-  stroke:rgba(255,10,0,0.62);
   stroke-width:1;
   transform-origin:50% 50%;
   -webkit-filter: drop-shadow( 1px 1px 1px rgba(0, 0, 0, .9));
